src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

        /*<img src={logo} className="App-logo" alt="logo" />*/


@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App {
  background-color: #282c34;
  height: 100vh;
  /*display: flex;*/
  /*flex-direction: column;*/
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 2px;
  align-items: center;
  /*justify-content: center;*/
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#documentation {
  height: 100%;
  width: 50vw;
  grid-row-start: 1;
  grid-row-end: 3;
  padding-top: 50px;
  padding-left: 20px;
  font-size: 12px;
  text-align: left;
}

#documentation-content {
  height: 90%;
}

#documentation-nav {
  position: absolute;
  bottom: 0px;
}

#documentation-nav button {
  background-color: rgb(50, 80, 168);
  padding: 10px;
  border-width: 0px;
  margin: 10px;
  color: rgb(240, 240, 240);
  border-radius: 2px;
  font-weight: bold;
}

.terminal {
  font-family: Courier;
  background-color: #000000; 
  color: #99ff00;
  display: block; 
  text-align: left;
  padding: 8px;
  width: 80%;
}


#console {
  font-family: Courier;
  background-color: #000000; 
  color: #99ff00;
  display: block; 
  float:left;
  width: 100%;
  height: 50vh;
  text-align: left;
  font-size: 0.5em;
  padding-left: 10px;
  overflow: scroll;
}


#commandline {
  outline: 0px solid transparent;
  /*width: 100%;*/
}

